--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-DB_NAME=myapp
+DB_NAME=gaia
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=
 
-APP_NAME=myapp
+APP_NAME=gaia
 APP_HOST=localhost
 ASSET_HOST=localhost:3000
 
 SECRET_KEY_BASE=adasdasdadasdasdasdasdasdads
 
-ASSET_AWS_BUCKET=myapp.5fpro.com
+ASSET_AWS_BUCKET=gaia-5fpro-com
 ASSET_AWS_REGION=ap-northeast-1
 
 AWS_ACCESS_KEY_ID="asdasd123123123"
@@ -18,7 +18,7 @@ AWS_REGION=ap-northeast-1
 
 REDIS_URL=redis://127.0.0.1:6379/0
 MEMCACHED_SERVER=127.0.0.1
-MEMCACHED_NAMESPACE=myapp
+MEMCACHED_NAMESPACE=gaia
 
 MAILER_SENDER=noreply@5fpro.com
 
@@ -35,8 +35,8 @@ OAUTH_GOOGLE_TOKEN=814226609657-eluqm3esbbllu1tj70j1b1pcsej9m34j.apps.googleuser
 OAUTH_GOOGLE_SECRET=1Cy-nHoMKrhU6-G5d8y7Cplv
 
 STAGING_MODE=0
-STAGING_USERNAME=myapp
-STAGING_PASSWORD=myapp
+STAGING_USERNAME=gaia
+STAGING_PASSWORD=gaia
 
 SLACK_WEBHOOK=https://hooks.slack.com/services/xxxxx/xxxx
 
